Booking/Payment: use DialogFramework